# manage-active-branches

./: README.md  manage-active-branches  pyproject.toml
manage_active_branches/: __main__.py
