[tool.poetry]
name = "manage-active-branches"
version = "0.1.0"
description = "Tool to manage active git branches"
authors = ["Richard van der Hoff <richard@matrix.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
